Issue #47 - Current balance is displayed in selected currency. Fixed scrollbar in Preferences.

--- a/vynos/frame/styles/ynos.css
+++ b/vynos/frame/styles/ynos.css
@@ -185,14 +185,6 @@ Wallet page
   display: inline-block;
 }
 
-.eth-balance:after {
-  content: "Ξ";
-}
-
-.eth-balance:after {
-  padding-left: 2px !important;
-}
-
 div.terms-text > p {
   font-size: 12px !important;
 }
